--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Stop Watch</title>
 </head>
 <body>
+  <h1>StopWatch</h1>
 <p id="display">
     <span id="hours">00</span>:
     <span id="minutes">00</span>:
